Push starting point for Session 15, with the API producing JWT's and requiring them for the User endpoints
