# SampleApi/AngularTrainingExampleAPI/DTOs/RefreshAccessTokenRequestDto.cs
@@ -1,0 +1,4 @@
+﻿namespace AngularTrainingExampleAPI.DTOs
+{
+   public record RefreshAccessTokenDto(string idToken);
+}
