# SampleApi/AngularTrainingExampleAPI/DTOs/SignInResponseDto.cs
@@ -1,4 +1,4 @@
 ﻿namespace AngularTrainingExampleAPI.DTOs
 {
-   public record SignInResponseDto(int userId, string authToken);
+   public record SignInResponseDto(int userId, string authToken, string idToken);
 }
